Apply the changes done in SIS 1.3 release. This is mostly documentation fixes.