@@ -15,7 +15,7 @@
  */
 package tech.uom.seshat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.HashMap;
 import java.util.Collections;
@@ -276,16 +276,16 @@ public final strictfp class SystemUnitTest {
         assertSame(Units.METRE,  Units.METRE .asType(Length.class));
         assertSame(Units.SECOND, Units.SECOND.asType(Time.class));
         /*
-         * Test with units outside the pre-defined constants in the Units class.
+         * Test with units outside the predefined constants in the Units class.
          */
         final Unit<Length> anonymous = new SystemUnit<>(Length.class, (UnitDimension) Units.METRE.getDimension(), null,  UnitRegistry.OTHER, (short) 0, null);
         final Unit<Length> otherName = new SystemUnit<>(Length.class, (UnitDimension) Units.METRE.getDimension(), "Foo", UnitRegistry.OTHER, (short) 0, null);
         assertSame(Units.METRE, anonymous.asType(Length.class));
         assertSame(otherName,   otherName.asType(Length.class));
         /*
-         * Verify that the unit can not be casted to an incompatible units.
+         * Verify that the unit cannot be casted to an incompatible units.
          */
-        for (final Unit<Length> unit : Arrays.asList(Units.METRE, anonymous, otherName)) {
+        for (final Unit<Length> unit : List.of(Units.METRE, anonymous, otherName)) {
             try {
                 unit.asType(Time.class);
                 fail("Expected an exception for incompatible quantity types.");
@@ -304,7 +304,7 @@ public final strictfp class SystemUnitTest {
     public void testAsTypeForNewQuantity() {
         /*
          * Tests with a new quantity type unknown to Seshat.
-         * Seshat can not prove that the type is wrong, so it should accept it.
+         * Seshat cannot prove that the type is wrong, so it should accept it.
          */
         final Unit<Strange> strange = Units.METRE.asType(Strange.class);
         final Unit<Strange> named   = strange.alternate("strange");
@@ -312,7 +312,7 @@ public final strictfp class SystemUnitTest {
         assertEquals("Should have a name since we invoked 'alternate'.", "strange", named.getSymbol());
         assertSame  ("Should prefer the named instance.", named, Units.METRE.asType(Strange.class));
         assertSame  ("Go back to the fundamental unit.",  Units.METRE, named.asType(Length.class));
-        for (final Unit<Strange> unit : Arrays.asList(strange, named)) {
+        for (final Unit<Strange> unit : List.of(strange, named)) {
             try {
                 unit.asType(Time.class);
                 fail("Expected an exception for incompatible quantity types.");
